Updated compilation process for tensorflow 1.11 and CUDA 10 on Ubuntu 18.04